--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@mwtn.net
       PGADMIN_DEFAULT_PASSWORD: "@Fr0nt1er@"
+      PGADMIN_CONFIG_ENHANCED_COOKIE_PROTECTION: "False"
     ports:
       - "8081:80"
     volumes:
